# windows-service

./: .gitignore  README.md  delete  windows-service.cabal
app/: Main.hs
src/: Internal.hs  WindowsService.c  WindowsService.cpp  WindowsService.hs
