name:                windows-service
version:             0.1.0.0
synopsis:            Haskell Windows library
-- description:
homepage:            https://github.com/byteally/windows-service#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh
maintainer:          magesh85@gmail.com
copyright:           © 2017 Magesh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WindowsService
  other-modules:       Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , inline-c
                     , template-haskell
                     , containers >= 0.5
                     , async
  c-sources:           src/WindowsService.c           
  default-language:    Haskell2010

executable windows-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , windows-service
  extra-libraries:     Kernel32
                       Advapi32
  default-language:    Haskell2010

test-suite windows-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , windows-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/windows-service
